--- a/spices/cix-gnu-coreutils.org
+++ b/spices/cix-gnu-coreutils.org
@@ -1,13 +1,13 @@
 # File       : cix-gnu-coreutils.org
 # Created    : Wed 14 Oct 2015 23:07:41
-# Modified   : <2019-2-06 Wed 20:51:19 GMT> Sharlatan
+# Modified   : <2020-01-31 Fri 22:11:39 GMT>
 # Maintainer : sharlatan
-# Sinopsis   : <A set of basic GNU tools commonly used in shell scripts>
+# Synopsis   : <A set of basic GNU tools commonly used in shell scripts>
 
 #+OPTIONS: num:nil
 
 [[file:../cix-main.org][|≣|]]
-#+TITLE: coreutils
+#+TITLE: GNU coreutils
 |               |               |
 |---------------+---------------|
 | *Author*      | [[http://git.savannah.gnu.org/cgit/coreutils.git/tree/AUTHORS][(all..)]]       |
@@ -247,13 +247,13 @@ exist on every operating system. This package is the union of the GNU
 #+END_SRC
 
 * Receipts
-** arch                                                                         
+** arch
 [[Index][⬆]]
 *** arch::options
 *** arch::examples
 *** arch::files
 *** arch::see-also
-** base64                                                                       
+** base64
 [[Index][⬆]] /base64 encode/decode data and print to standard output/
 /Written by Simon Josefsson/
 *** base64::options
@@ -284,31 +284,31 @@ create a *C* chars by *L* lines file of a random ASCII characters:
 
 *** base64::files
 *** base64::see-also
-** basename                                                                     
+** basename
 [[Index][⬆]]
 *** basename::options
 *** basename::examples
 *** basename::files
 *** basename::see-also
-** cat                                                                          
+** cat
 [[Index][⬆]]
 *** cat::options
 *** cat::examples
 *** cat::files
 *** cat::see-also
-** chcon                                                                        
+** chcon
 [[Index][⬆]]
 *** chcon::options
 *** chcon::examples
 *** chcon::files
 *** chcon::see-also
-** chgrp                                                                        
+** chgrp
 [[Index][⬆]]
 *** chgrp::options
 *** chgrp::examples
 *** chgrp::files
 *** chgrp::see-also
-** chmod                                                                        
+** chmod
 [[Index][⬆]] /change file mode bits/
 /Written by David MacKenzie and Jim Meyering/
 
@@ -327,7 +327,7 @@ grant read access to a directory to all members your group:
 Note: "execute" permission is required in order to read a directory.
 
 **** chmod-171218004946
-grant read permissions to everyone on the system: 
+grant read permissions to everyone on the system:
 :    ~$ chmod ugo+r file_name
 :    ~$ chmod 0444 file_name
 
@@ -354,25 +354,25 @@ allow everyone in your group to be able to modify the file:
 
 *** chmod::files
 *** chmod::see-also
-** chown                                                                        
+** chown
 [[Index][⬆]]
 *** chown::options
 *** chown::examples
 *** chown::files
 *** chown::see-also
-** chroot                                                                       
+** chroot
 [[Index][⬆]]
 *** chroot::options
 *** chroot::examples
 *** chroot::files
 *** chroot::see-also
-** cksum                                                                        
+** cksum
 [[Index][⬆]]
 *** cksum::options
 *** cksum::examples
 *** cksum::files
 *** cksum::see-also
-** comm                                                                         
+** comm
 [[Index][⬆]] /compare two sorted files line by line/
 /Written by Richard M. Stallman and David MacKenzie/
 *** comm::options
@@ -384,7 +384,7 @@ find lines existing only in file_1 against file_2::
 *** comm::files
 *** comm::see-also
   [[file:./cix-gnu-core-utilities.org::*join][join(1)]], [[file:./cix-gnu-core-utilities.org::*uniq][uniq(1)]]
-** cp                                                                           
+** cp
 [[Index][⬆]] /copy files and directories/
 /Written by Torbjorn Granlund, David MacKenzie, and Jim Meyering/
 *** cp::options
@@ -427,15 +427,20 @@ find lines existing only in file_1 against file_2::
 |------------------------------------+------+-------+-------+---------------------------------------------------------------------------------------|
 
 *** cp::examples
+**** cp-190224221300
+recursively copy files if destination files are not exist or they are older:
+:    ~$ cp --update --recursive --verbose source_path destination_path
+:    ~$ cp -urv source_path destination_path
+
 *** cp::files
 *** cp::see-also
-** csplit                                                                       
+** csplit
 [[Index][⬆]]
 *** csplit::options
 *** csplit::examples
 *** csplit::files
 *** csplit::see-also
-** cut                                                                          
+** cut
 [[Index][⬆]] /remove sections from each line of files/
 /Written by David M. Ihnat, David MacKenzie, and Jim Meyering/
 *** cut::options
@@ -463,34 +468,34 @@ slice off lines from left, right, both sides by N chars:
 [[file:./cix-util-linux.org::*rev][rev]]
 *** cut::files
 *** cut::see-also
-** date                                                                         
+** date
 [[Index][⬆]]
 *** date::options
 *** date::examples
 *** date::files
 *** date::see-also
-** dd                                                                           
+** dd
 [[Index][⬆]] /convert and copy a file/
 /Written by Paul Rubin, David MacKenzie, and Stuart Kemp./
 
 *** dd::options
 
-| OPT            |                   |
-|----------------+-------------------|
-| =bs=BYTES=     | c w b K MB M GB G |
-| =cbs=BYTES=    |                   |
-| =conv=CONVS=   |                   |
-| =count=N=      |                   |
-| =ibs=BYTES=    |                   |
-| =if=FILE=      | Input file        |
-| =iflag=FLAGS=  |                   |
-| =obs=BYTES=    |                   |
-| =of=FILE=      | Output file       |
-| =oflag=FLAGS=  |                   |
-| =seek=N=       |                   |
-| =skip=N=       |                   |
-| =status=LEVEL= |                   |
-|----------------+-------------------|
+| OPT            | TYPE |  V++ | V-- | DESC              |
+|----------------+------+------+-----+-------------------|
+| =bs=BYTES=     |      |      |     | c w b K MB M GB G |
+| =cbs=BYTES=    |      |      |     |                   |
+| =conv=CONVS=   |      |      |     |                   |
+| =count=N=      |      |      |     |                   |
+| =ibs=BYTES=    |      |      |     |                   |
+| =if=FILE=      |      |      |     | Input file        |
+| =iflag=FLAGS=  |      |      |     |                   |
+| =obs=BYTES=    |      |      |     |                   |
+| =of=FILE=      |      |      |     | Output file       |
+| =oflag=FLAGS=  |      |      |     |                   |
+| =seek=N=       |      |      |     |                   |
+| =skip=N=       |      |      |     |                   |
+| =status=LEVEL= |      | 8.24 |     |                   |
+|----------------+------+------+-----+-------------------|
 
 *** dd::examples
 **** dd-161124233800
@@ -536,14 +541,14 @@ copy and restore MBR of block device (HDD/SSD):
   BLK_CP="/dev/sda"
   BLK_RS="/dev/sdb"
   MBR="$HOME"/mbr.img
-  echo "Copy MBR data from $BLK_CP" 
+  echo "Copy MBR data from $BLK_CP"
   dd if="$BLK_CP" of="$MBR" bs=512 count=1
   echo "Restore MBR data to $BLK_RS"
   dd if="$MBR" of="$BLK_RS"
 #+END_SRC
 [[./cix-gnu-bash-builtin.org::echo][echo]]
 
-**** dd-161113185337                                                          
+**** dd-161113185337
 stress test of BLOCK device with random size files to a random sector number:
 #+BEGIN_SRC sh
   #!/usr/bin/bash
@@ -573,7 +578,7 @@ stress test of BLOCK device with random size files to a random sector number:
 #+END_SRC
 [[./cix-gnu-core-utilities.org::*shuf][shuf (1)]] [[file:./cix-gnu-core-utilities.org::*rm][rm (1)]] [[./cix-gnu-core-utilities.org::*cat][cat (1)]] [[./cix-gnu-bash-builtin.org::*while][while]]
 
-**** dd-161115233028                                                          
+**** dd-161115233028
 duplicate several drives concurrently:
 #+BEGIN_SRC sh
   #!/usr/bin/env bash
@@ -596,67 +601,79 @@ read =file1=, =file2= and append output back to =file1=:
 :    ~$ cat file1 <(dd if=file2 bs="$(wc -c file2)" count=1) >> file2
 
 **** dd-170819013515
-create a forensic image of all data within device, without stopping should an
-error be encountered (such as bad blocks), and replacing any errors found with
-null bytes:
+create a forensic image of all data within device:
 :    ~# dd if=/dev/sda1 of=output_file.img conv=notrunc,noerror,sync
+
+without stopping should an error be encountered (such as bad blocks),
+and replacing any errors found with null bytes.
+
+**** dd-190602223940
+clone image to drive or USB with showing progress:
+:    ~# dd if=guix-system-install-1.0.1.x86_64-linux.iso of=/dev/sdc status=progress; sync
+
+Where =/dev/sdc= is external drive or USB.
+
+**** dd-200131214941
+create a 1000M =file= which contains random data mixture binary and strings:
+:    ~$ dd if=/dev/urandom of=file bs=1024k count=1000 status=progress
+
 *** dd::files
 *** dd::see-also
-** df                                                                           
+** df
 [[Index][⬆]]
 *** df::options
 *** df::examples
 *** df::files
 *** df::see-also
-** dir                                                                          
+** dir
 [[Index][⬆]]
 *** dir::options
 *** dir::examples
 *** dir::files
 *** dir::see-also
-** dircolors                                                                    
+** dircolors
 [[Index][⬆]]
 *** dircolors::options
 *** dircolors::examples
 *** dircolors::files
 *** dircolors::see-also
-** dirname                                                                      
+** dirname
 [[Index][⬆]]
 *** dirname::options
 *** dirname::examples
 *** dirname::files
 *** dirname::see-also
-** du                                                                           
+** du
 [[Index][⬆]] /estimate file space usage/
 /Written by Torbjorn Granlund, David MacKenzie, Paul Eggert, and Jim Meyering./
 *** du::options
 *** du::examples
 **** du-170721002845
-show size of hiden and normal dirrectores of the current location:
+show size of hiden and normal directorates of the current location:
 :   ~$ du -sch .[!.]* * | sort -h
 ~.[!.]*~ It's a glob that lists all the files that start with a single ~.~
 [[file:./cix-gnu-coreutils.org::*sort][sort]]
 *** du::files
 *** du::see-also
-** echo                                                                         
+** echo
 [[Index][⬆]]
 *** echo::options
 *** echo::examples
 *** echo::files
 *** echo::see-also
-** env                                                                          
+** env
 [[Index][⬆]]
 *** env::options
 *** env::examples
 *** env::files
 *** env::see-also
-** expand                                                                       
+** expand
 [[Index][⬆]]
 *** expand::options
 *** expand::examples
 *** expand::files
 *** expand::see-also
-** expr                                                                         
+** expr
 [[Index][⬆]] /evaluate expressions/
 /Written by Mike Parker, James Youngman, and Paul Eggert./
 *** expr::options
@@ -677,73 +694,73 @@ show size of hiden and normal dirrectores of the current location:
 #+END_SRC
 *** expr::files
 *** expr::see-also
-** factor                                                                       
+** factor
 [[Index][⬆]]
 *** factor::options
 *** factor::examples
 *** factor::files
 *** factor::see-also
-** false                                                                        
+** false
 [[Index][⬆]]
 *** false::options
 *** false::examples
 *** false::files
 *** false::see-also
-** fmt                                                                          
+** fmt
 [[Index][⬆]]
 *** fmt::options
 *** fmt::examples
 *** fmt::files
 *** fmt::see-also
-** fold                                                                         
+** fold
 [[Index][⬆]]
 *** fold::options
 *** fold::examples
 *** fold::files
 *** fold::see-also
-** groups                                                                       
+** groups
 [[Index][⬆]]
 *** groups::options
 *** groups::examples
 *** groups::files
 *** groups::see-also
-** head                                                                         
+** head
 [[Index][⬆]]
 *** head::options
 *** head::examples
 *** head::files
 *** head::see-also
-** hostid                                                                       
+** hostid
 [[Index][⬆]]
 *** hostid::options
 *** hostid::examples
 *** hostid::files
 *** hostid::see-also
-** id                                                                           
+** id
 [[Index][⬆]]
 *** id::options
 *** id::examples
 *** id::files
 *** id::see-also
-** install                                                                      
+** install
 [[Index][⬆]]
 *** install::options
 *** install::examples
 *** install::files
 *** install::see-also
-** join                                                                         
+** join
 [[Index][⬆]]
 *** join::options
 *** join::examples
 *** join::files
 *** join::see-also
-** link                                                                         
+** link
 [[Index][⬆]]
 *** link::options
 *** link::examples
 *** link::files
 *** link::see-also
-** ln                                                                           
+** ln
 [[Index][⬆]] /make links between files/
 /Written by Mike Parker and David MacKenzie./
 
@@ -757,13 +774,13 @@ repoint symlink to another file:
 *** ln::see-also
     [[file:./cix-gnu-core-utilities.org::*link][link (2)]]
 
-** logname                                                                      
+** logname
 [[Index][⬆]]
 *** logname::options
 *** logname::examples
 *** logname::files
 *** logname::see-also
-** ls                                                                           
+** ls
 [[Index][⬆]] /list directory contents/.
 /Written by Richard M. Stallman and David MacKenzie./
 *** ls::options
@@ -832,13 +849,13 @@ sort files and directories in current working directory by size:
 :    ~$ ls -lS ./  | grep -v "^d" # just files, ignore directory
 *** ls::see-also
   [[file:./cix-gnu-core-utilities.org::*dir][dir (1)]]
-** md5sum                                                                       
+** md5sum
 [[Index][⬆]]
 *** md5sum::options
 *** md5sum::examples
 *** md5sum::files
 *** md5sum::see-also
-** mkdir                                                                        
+** mkdir
 [[Index][⬆]] /make directories/
 /Written by David MacKenzie/
 *** mkdir::options
@@ -852,19 +869,19 @@ create a directory tree with one line:
 :    ~$ mkdir -p project/{lib/ext,bin,src,doc/{html,info,pdf},demo/stat/a}
 *** mkdir::files
 *** mkdir::see-also
-** mkfifo                                                                       
+** mkfifo
 [[Index][⬆]]
 *** mkfifo::options
 *** mkfifo::examples
 *** mkfifo::files
 *** mkfifo::see-also
-** mknod                                                                        
+** mknod
 [[Index][⬆]]
 *** mknod::options
 *** mknod::examples
 *** mknod::files
 *** mknod::see-also
-** mktemp                                                                       
+** mktemp
 [[Index][⬆]] /create a temporary file or directory/
 /Written by Jim Meyering and Eric Blake./
 *** mktemp::options
@@ -886,7 +903,7 @@ Create a temporary dirrectory in =/tmp=:
 
 *** mktemp::files
 *** mktemp::see-also
-** mv                                                                           
+** mv
 [[Index][⬆]] /move (rename) files/
 /Written by Mike Parker, David MacKenzie, and Jim Meyering./
 *** mv::options
@@ -925,19 +942,19 @@ move multiple files or directories to the one target location:
 
 *** mv::see-also
 [[file:./cix-util-linux.org::*rename][rename(2)]]
-** nice                                                                         
+** nice
 [[Index][⬆]]
 *** nice::options
 *** nice::examples
 *** nice::files
 *** nice::see-also
-** nl                                                                           
+** nl
 [[Index][⬆]]
 *** nl::options
 *** nl::examples
 *** nl::files
 *** nl::see-also
-** nohup                                                                        
+** nohup
 [[Index][⬆]] /run a command immune to hangups, with output to a non-tty/
 /Written by Jim Meyering./
 
@@ -960,13 +977,13 @@ Run a process as background process:
 It omits bouth stdin and stdout from script and =nohup=.
 *** nohup::files
 *** nohup::see-also
-** nproc                                                                        
+** nproc
 [[Index][⬆]]
 *** nproc::options
 *** nproc::examples
 *** nproc::files
 *** nproc::see-also
-** numfmt                                                                       
+** numfmt
 [[Index][⬆]] /Convert numbers from/to human-readable strings/
 /Writen by Assaf Gordon/
 
@@ -974,13 +991,13 @@ It omits bouth stdin and stdout from script and =nohup=.
 *** numfmt::examples
 *** numfmt::files
 *** numfmt::see-also
-** od                                                                           
+** od
 [[Index][⬆]]
 *** od::options
 *** od::examples
 *** od::files
 *** od::see-also
-** paste                                                                        
+** paste
 [[Index][⬆]] /merge lines of files/
 /Written by David M. Ihnat and David MacKenzie/
 
@@ -995,10 +1012,10 @@ It omits bouth stdin and stdout from script and =nohup=.
 *** paste::examples
 **** paste-170808223506
 sumirize the size of git directores using =Bash= $[...] $((...)):
-:    ~$ echo $[$(find ~/ -type d -name ".git" -print0 | xargs -0 du -s | cut -f1 | paste -sd+)] 
+:    ~$ echo $[$(find ~/ -type d -name ".git" -print0 | xargs -0 du -s | cut -f1 | paste -sd+)]
 [[file:./cix-gnu-coreutils.org::*echo][echo]] [[file:./cix-gnu-findutils.org::*find][find]] [[file:./cix-gnu-findutils.org::*xargs][xargs]] [[file:./cix-gnu-coreutils.org::*du][du]] [[file:./cix-gnu-coreutils.org::*cut][cut]]
 
-**** paste-171004214104 
+**** paste-171004214104
 join all lines of the file with a SPACE delimiter:
 :    ~$ paste -sd" " input_f
 
@@ -1013,43 +1030,43 @@ list files with specified number of columns:
 
 *** paste::files
 *** paste::see-also
-** pathchk                                                                      
+** pathchk
 [[Index][⬆]]
 *** pathchk::options
 *** pathchk::examples
 *** pathchk::files
 *** pathchk::see-also
-** pinky                                                                        
+** pinky
 [[Index][⬆]]
 *** pinky::options
 *** pinky::examples
 *** pinky::files
 *** pinky::see-also
-** pr                                                                           
+** pr
 [[Index][⬆]]
 *** pr::options
 *** pr::examples
 *** pr::files
 *** pr::see-also
-** printenv                                                                     
+** printenv
 [[Index][⬆]]
 *** printenv::options
 *** printenv::examples
 *** printenv::files
 *** printenv::see-also
-** printf                                                                       
+** printf
 [[Index][⬆]]
 *** printf::options
 *** printf::examples
 *** printf::files
 *** printf::see-also
-** ptx                                                                          
+** ptx
 [[Index][⬆]]
 *** ptx::options
 *** ptx::examples
 *** ptx::files
 *** ptx::see-also
-** pwd                                                                          
+** pwd
 [[Index][⬆]] /print name of current/working directory/
 /Written by Jim Meyering/
 *** pwd::options
@@ -1061,25 +1078,25 @@ print relative path to the curent directory:
 
 *** pwd::files
 *** pwd::see-also
-** readlink                                                                     
+** readlink
 [[Index][⬆]]
 *** readlink::options
 *** readlink::examples
 *** readlink::files
 *** readlink::see-also
-** realpath                                                                     
+** realpath
 [[Index][⬆]]
 *** realpath::options
 *** realpath::examples
 *** realpath::files
 *** realpath::see-also
-** realpath                                                                     
+** realpath
 [[Index][⬆]]
 *** realpath::options
 *** realpath::examples
 *** realpath::files
 *** realpath::see-also
-** rm                                                                           
+** rm
 [[Index][⬆]] /remove files or directories
 Written by Paul Rubin, David MacKenzie, Richard M. Stallman, and Jim Meyering/
 *** rm::options
@@ -1092,19 +1109,19 @@ remove all but specific file(s):
 *** rm::files
 *** rm::see-also
   unlink (1), unlink(2), chattr(1), [[file:./cix-gnu-core-utilities.org::*shred][shred]](1)
-** rmdir                                                                        
+** rmdir
 [[Index][⬆]]
 *** rmdir::options
 *** rmdir::examples
 *** rmdir::files
 *** rmdir::see-also
-** runcon                                                                       
+** runcon
 [[Index][⬆]]
 *** runcon::options
 *** runcon::examples
 *** runcon::files
 *** runcon::see-also
-** seq                                                                          
+** seq
 [[Index][⬆]]
 *** seq::options
 *** seq::examples
@@ -1113,56 +1130,56 @@ print a list of years +5 (N) from current:
 :    ~$ seq "$(date +%Y)" "$(( $(date +%Y) + 5))"
 *** seq::files
 *** seq::see-also
-** sha1sum                                                                      
+** sha1sum
 [[Index][⬆]]
 *** sha1sum::options
 *** sha1sum::examples
 *** sha1sum::files
 *** sha1sum::see-also
-** sha224sum                                                                    
+** sha224sum
 [[Index][⬆]]
 *** sha224sum::options
 *** sha224sum::examples
 *** sha224sum::files
 *** sha224sum::see-also
-** sha256sum                                                                    
+** sha256sum
 [[Index][⬆]]
 *** sha256sum::options
 *** sha256sum::examples
 *** sha256sum::files
 *** sha256sum::see-also
-** sha384sum                                                                    
+** sha384sum
 [[Index][⬆]]
 *** sha384sum::options
 *** sha384sum::examples
 *** sha384sum::files
 *** sha384sum::see-also
-** sha512sum                                                                    
+** sha512sum
 [[Index][⬆]]
 *** sha512sum::options
 *** sha512sum::examples
 *** sha512sum::files
 *** sha512sum::see-also
 
-** shred                                                                        
+** shred
 [[Index][⬆]]
 *** shred::options
 *** shred::examples
 *** shred::files
 *** shred::see-also
-** shuf                                                                         
+** shuf
 [[Index][⬆]]
 *** shuf::options
 *** shuf::examples
 *** shuf::files
 *** shuf::see-also
-** sleep                                                                        
+** sleep
 [[Index][⬆]]
 *** sleep::options
 *** sleep::examples
 *** sleep::files
 *** sleep::see-also
-** sort                                                                         
+** sort
 [[Index][⬆]] /sort lines of text files/
 /Written by Mike Haertel and Paul Eggert/
 *** sort::options
@@ -1225,43 +1242,43 @@ list files and sort them by specific field (column):
 *** sort::files
 *** sort::see-also
 [[file:./cix-gnu-coreutils.org::*shuf][shuf]] [[file:./cix-gnu-coreutils.org::*uniq][uniq]]
-** split                                                                        
+** split
 [[Index][⬆]]
 *** split::options
 *** split::examples
 *** split::files
 *** split::see-also
-** stat                                                                         
+** stat
 [[Index][⬆]]
 *** stat::options
 *** stat::examples
 *** stat::files
 *** stat::see-also
-** stdbuf                                                                       
+** stdbuf
 [[Index][⬆]]
 *** stdbuf::options
 *** stdbuf::examples
 *** stdbuf::files
 *** stdbuf::see-also
-** stty                                                                         
+** stty
 [[Index][⬆]]
 *** stty::options
 *** stty::examples
 *** stty::files
 *** stty::see-also
-** sum                                                                          
+** sum
 [[Index][⬆]]
 *** sum::options
 *** sum::examples
 *** sum::files
 *** sum::see-also
-** sync                                                                         
+** sync
 [[Index][⬆]]
 *** sync::options
 *** sync::examples
 *** sync::files
 *** sync::see-also
-** tac                                                                          
+** tac
 [[Index][⬆]] /concatenate and print files in reverse/
 /Written by Jay Lepreau and David MacKenzie./
 *** tac::options
@@ -1271,7 +1288,7 @@ list files and sort them by specific field (column):
 *** tac::see-also
     [[file:./cix-util-linux.org::*rev][rev (1)]]
     tail
-** tail                                                                         
+** tail
 [[Index][⬆]] /output the last part of file/
 /Written by Paul Rubin, David MacKenzie, Ian Lance Taylor, and Jim Meyering./
 
@@ -1282,7 +1299,7 @@ A *tail* command appeared in Version 7 AT&T UNIX.
 *** tail::see-also
     [[file:./cix-gnu-core-utilities.org::*cat][cat (1)]] [[file:./cix-gnu-core-utilities.org::*tac][tac (1)]] [[file:./cix-gnu-core-utilities.org::*head][head (1)]] [[file:./cix-sed.org::*sed][sed (1)]]
 
-** tee                                                                          
+** tee
 [[Index][⬆]] /read from standard input and write to standard output and files/
 /Written by Mike Parker, Richard M. Stallman, and David MacKenzie./
 
@@ -1321,13 +1338,13 @@ download a file and validate it on the "fly":
 [[file:./cix-wget.org::*wget][wget]]
 *** tee::files
 *** tee::see-also
-** test                                                                         
+** test
 [[Index][⬆]]
 *** test::options
 *** test::examples
 *** test::files
 *** test::see-also
-** timeout                                                                      
+** timeout
 [[Index][⬆]]
 *** timeout::options
 *** timeout::examples
@@ -1337,13 +1354,13 @@ test from shell script if remote TCP port is open:
 :    ~$ timeout $TIMEOUT_SECONDS bash -c 'cat < /dev/null > /dev/tcp/${HOST}/${PORT}'; echo $?
 *** timeout::files
 *** timeout::see-also
-** touch                                                                        
+** touch
 [[Index][⬆]]
 *** touch::options
 *** touch::examples
 *** touch::files
 *** touch::see-also
-** tr                                                                           
+** tr
 [[Index][⬆]] /translate or delete characters/
 /Written by Jim Meyering./
 *** tr::options
@@ -1370,43 +1387,43 @@ replace multiple characters sequence with a single one:
 :    ~$ tr -s \| = input_f
 *** tr::files
 *** tr::see-also
-** true                                                                         
+** true
 [[Index][⬆]]
 *** true::options
 *** true::examples
 *** true::files
 *** true::see-also
-** truncate                                                                     
+** truncate
 [[Index][⬆]]
 *** truncate::options
 *** truncate::examples
 *** truncate::files
 *** truncate::see-also
-** tsort                                                                        
+** tsort
 [[Index][⬆]]
 *** tsort::options
 *** tsort::examples
 *** tsort::files
 *** tsort::see-also
-** tty                                                                          
+** tty
 [[Index][⬆]]
 *** tty::options
 *** tty::examples
 *** tty::files
 *** tty::see-also
-** uname                                                                        
+** uname
 [[Index][⬆]]
 *** uname::options
 *** uname::examples
 *** uname::files
 *** uname::see-also
-** unexpand                                                                     
+** unexpand
 [[Index][⬆]]
 *** unexpand::options
 *** unexpand::examples
 *** unexpand::files
 *** unexpand::see-also
-** uniq                                                                         
+** uniq
 [[Index][⬆]]
 *** uniq::options
 | OPTION                    | TYPE | V++ | V-- | DESCRIPTION                                           |
@@ -1431,50 +1448,50 @@ remove all dublicated lines from a input_f:
 :    ~$ sort input_f | uniq -u
 *** uniq::files
 *** uniq::see-also
-** unlink                                                                       
+** unlink
 [[Index][⬆]]
 *** unlink::options
 *** unlink::examples
 *** unlink::files
 *** unlink::see-also
-** uptime                                                                       
+** uptime
 [[Index][⬆]]
 *** uptime::options
 *** uptime::examples
 *** uptime::files
 *** uptime::see-also
-** users                                                                        
+** users
 [[Index][⬆]]
 *** users::options
 *** users::examples
 *** users::files
 *** users::see-also
-** vdir                                                                         
+** vdir
 [[Index][⬆]]
 *** vdir::options
 *** vdir::examples
 *** vdir::files
 *** vdir::see-also
-** wc                                                                           
+** wc
 [[Index][⬆]]
 *** wc::options
 *** wc::examples
 *** wc::files
 *** wc::see-also
-** who                                                                          
+** who
 [[Index][⬆]]
 *** who::options
 *** who::examples
 *** who::files
 *** who::see-also
-** whoami                                                                       
+** whoami
 [[Index][⬆]]
 *** whoami::options
 *** whoami::examples
 *** whoami::files
 *** whoami::see-also
 [[Index][⬆]]
-** yes                                                                          
+** yes
 [[Index][⬆]]
 *** yes::options
 *** yes::examples
