--- a/spices/cix-jq.org
+++ b/spices/cix-jq.org
@@ -1,6 +1,6 @@
 # File           : cix-jq.org
 # Created        : <2017-08-04 Fri 23:19:38 BST>
-# Modified       : <2017-11-16 Thu 21:00:44 GMT> Sharlatan
+# Modified       : <2020-01-31 Fri 21:21:14 GMT>
 # Author         : sharlatan
 # Maintainer(s)  :
 # Sinopsis       : lightweight and flexible command-line JSON processor.
