--- a/cix-main.org
+++ b/cix-main.org
@@ -197,9 +197,12 @@ on *GNU/Linux*
   + [[./spices/cix-dsniff.org][dsniff]] :: tools for network auditing and penetration testing: =GNU/Linux= =OpenBSD= =Solaris=
   + [[./spices/cix-ipset.org][ipset]] :: Manage Linux IP sets: =GNU/Linux=
   + [[./spices/cix-iptraf-ng.org][iptraf-ng]] :: a console-based network monitoring utility: =GNU/Linux=
-  + [[./spices/cix-socat.org][socat]] :: bidirectional data relay between two data channels ('netcat++'): =GNU/Linux=
+ : + [[./spices/cix-socat.org][socat]] :: bidirectional data relay between two data channels ('netcat++'): =GNU/Linux=
   + [tshark] ::
-
+  + [[./spices/cix-snort.org][snort]] ::
+  + [suricata] ::
+  + [zink] ::
+   
 - *Shell* /Not just sand.../
   + [[file:./spices/cix-ash.org][ash]] :: Almquist SHell in NetBSD
   + [[./spices/cix-gnu-bash.org][bash]] :: GNU bash shell built in commands
@@ -228,6 +231,7 @@ on *GNU/Linux*
   + [apparmor] :: is a Mandatory Access Control (MAC)
   + [rkhunter] ::
   + [yara] ::
+  + [[file:./spices/cix-openssl.org][openssl]] :: Utilities from the general purpose cryptography library with TLS implementation
   + [seccomp] ::
   + [[file:./spices/cix-lynis.org][lynis]] :: security and system auditing tool: =GNU/Linux= =OS-X= =FreeBSD= =OpenBSD= =Solaris= =AIX= =HP-UX= =NetBSD=
   + [[file:./spices/cix-pam.org][pam]] :: an extensible library which provides authentication for applications: =AIX= =DragonFly-BSD= =FreeBSD= =HP-UX= =GNU/Linux= =OS-X= =NetBSD= =Solaris=
