--- a/cix-main.org
+++ b/cix-main.org
@@ -76,32 +76,48 @@ on *GNU/Linux*
 - *Core* /Usually it contains on the most distributions/
   + [bsd] :: list of common BSD commands:
   + [[./spices/cix-busybox.org][busybox]] :: the swiss army knife of embedded Linux: =GNU/Linux= =FreeBSD=
-  + [[./spices/cix-gnu-coreutils.org][coreutis]] :: basic file, shell and text manipulation utilities: =GNU/Linux= =FreeBSD= =HP-UX= =AUX=
+  + [[./spices/cix-gnu-coreutils.org][coreutis]] :: basic file, shell and text manipulation utilities: =GNU/Linux=
+    =FreeBSD= =HP-UX= =AUX=
   + [[./spices/cix-kbd.org][kbd]] :: tools for configuring the console: =GNU/Linux=
   + [[./spices/cix-man-db.org][man-db]] :: tools for searching and reading man pages: =GNU/Linux=
-  + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens: =GNU/Linux= =FreeBSD= =UNIX= =OS-X= =NetBSD=
-  + [[file:./spices/cix-the-heirloom-project.org][the heirloom project]] :: traditional implementations of standard UNIX utils: =SanOS=
-  + [[./spices/cix-toybox.org][toybox]]  :: common Linux commands for embedded systems (POSIX-2008 and LSB 4.1): =GNU/Linux= =Android=
-  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system: =GNU/Linux=
+  + [[file:spices/cix-ncurses.org][ncurses]] :: terminal-independent method of updating character screens:
+    =GNU/Linux= =FreeBSD= =UNIX= =OS-X= =NetBSD=
+  + [[file:./spices/cix-the-heirloom-project.org][the heirloom project]] :: traditional implementations of standard UNIX utils:
+    =SanOS=
+  + [[./spices/cix-toybox.org][toybox]]  :: common Linux commands for embedded systems (POSIX-2008 and LSB
+    4.1): =GNU/Linux= =Android=
+  + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system:
+    =GNU/Linux=
 
 - *File* /Everything is a file/
   + [[file:./spices/cix-diffutils.org][diffutils]] :: a GNU collection of diff utilities: =GNU/Linux=
   + [[./spices/cix-emacs.org][emacs]] :: GNU Emacs text editor: =GNU/Linux=
-  + [[./spices/cix-file.org][file]] :: a utility for determining file types: =GNU/Linux= =NetBSD= =FreeBSD= =OS/2= =OS-X= =DOS= =Windows=
+  + [[./spices/cix-file.org][file]] :: a utility for determining file types: =GNU/Linux= =NetBSD= =FreeBSD=
+    =OS/2= =OS-X= =DOS= =Windows=
   + [[./spices/cix-gawk.org][gawk]] :: the GNU version of the AWK text processing utility: =GNU/Linux=
-  + [[./spices/cix-less.org][less]] :: a text file browser similar to more, but better: =GNU/Linux= =UNIX= =OS-X=
-  + [[./spices/cix-lsof.org][lsof]] :: a utility which lists open files on *nix systems: =GNU/Linux= =FreeBSD= =OS-X= =Solaris=
-  + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor: =GNU/Linux= =OS-X= =Windows=
+  + [[./spices/cix-less.org][less]] :: a text file browser similar to more, but better: =GNU/Linux= =UNIX=
+    =OS-X=
+  + [[./spices/cix-lsof.org][lsof]] :: a utility which lists open files on *nix systems: =GNU/Linux=
+    =FreeBSD= =OS-X= =Solaris=
+  + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor: =GNU/Linux=
+    =OS-X= =Windows=
   + [[./spices/cix-nano.org][nano]] :: a small text editor: =GNU/Linux=
   + [[./spices/cix-sed.org][sed]] :: a GNU stream text editor: =GNU/Linux=
   + [[./spices/cix-vim.org][vim]] :: recent enhancements of vim: =FreeBSD= =GNU/Linux= =OS-X=
 
 - *Transfare-sync* /Put me up, put me down/
-  + [[file:./spices/cix-curl.org][curl]] :: a utility for getting files from remote servers: =AIX= =AmigaOS= =BeOS= =DOS= =DragonFly-BSD= =FreeBSD= =HP-UX= =Haiku= =GNU/Hurd= =IRIX= =GNU/Linux= =OS-X= =MiNT= =MINIX= =NetBSD= =NetWare= =Nexenta= =OS/2= =OpenBSD= =Plan9= =QNX= =RISC-OS= =Solaris= =Syllable= =Tru64-UNIX= =UnixWare= =VMS= =Windows= =z/OS=
-  + [[./spices/cix-lsyncd.org][lsyncd]] :: live syncing daemon synchronizes local directories with remote targets: =GNU/Linux=
-  + [[file:./spices/cix-rsync.org][rsync]] :: a program for synchronizing files over a network: =FreeBSD= =GNU/Linux= =Windows=
+  + [[file:./spices/cix-curl.org][curl]] :: a utility for getting files from remote servers: =AIX= =AmigaOS=
+    =BeOS= =DOS= =DragonFly-BSD= =FreeBSD= =HP-UX= =Haiku= =GNU/Hurd= =IRIX=
+    =GNU/Linux= =OS-X= =MiNT= =MINIX= =NetBSD= =NetWare= =Nexenta= =OS/2=
+    =OpenBSD= =Plan9= =QNX= =RISC-OS= =Solaris= =Syllable= =Tru64-UNIX=
+    =UnixWare= =VMS= =Windows= =z/OS=
+  + [[./spices/cix-lsyncd.org][lsyncd]] :: live syncing daemon synchronizes local directories with remote
+    targets: =GNU/Linux=
+  + [[file:./spices/cix-rsync.org][rsync]] :: a program for synchronizing files over a network: =FreeBSD=
+    =GNU/Linux= =Windows=
   + [[./spices/cix-vsftpd.org][vsftpd]] :: very secure ftp daemon: =GNU/Linux=
-  + [[file:./spices/cix-wget.org][wget]] :: a utility for retrieving files using the http or ftp protocols: =GNU/Linux= =Windows= =OS-X= =OpenVMS= =HP-UX= =MorphOS= =AmigaOS=
+  + [[file:./spices/cix-wget.org][wget]] :: a utility for retrieving files using the http or ftp protocols:
+    =GNU/Linux= =Windows= =OS-X= =OpenVMS= =HP-UX= =MorphOS= =AmigaOS=
   + [[file:./spices/cix-tym.org][tym]] :: Time rSync Machine: =OS-X=
 
 - *Filesystem* /Partitions, filesystem craft and check/
@@ -111,7 +127,8 @@ on *GNU/Linux*
   + [[./spices/cix-btrfs-progs.org][btrfs-progs]] :: userspace programs for btrfs.
   + [[./spices/cix-curlftpfs.org][curlftpfs]] :: is a fs for accessing ftp hosts based on fuse and libcurl
   + [[./spices/cix-e2fsprogs.org][e2fsprogs]] :: filesystem utilities for use with ext2/3/4
-  + [[file:./spices/cix-glusterfs.org][glusterfs]] :: distributed file system: =GNU/Linux= =FreeBSD= =NetBSD= =OpenSolaris= =OS-X=
+  + [[file:./spices/cix-glusterfs.org][glusterfs]] :: distributed file system: =GNU/Linux= =FreeBSD= =NetBSD=
+    =OpenSolaris= =OS-X=
   + [[./spices/cix-lvm2.org][lvm2]] :: userland logical volume management tools
   + [[./spices/cix-nfs.org][nfs]] :: utilities for rall out NFS share
   + [[file:./spices/cix-gnu-parted.org][parted]] :: the GNU disk partition manipulation program: =GNU/Linux=
@@ -120,51 +137,68 @@ on *GNU/Linux*
   + [zfs] ::
 
 - *Utillities* /Be silent and help ppls/
-  + [likwid] ::
-  + [ohai] ::
-  + [psacct] ::
-  + [[./spices/cix-elfutils.org][elfutils]] :: collection of utilities and DSOs to handle ELF files and DWARF data
+  + [[./spices/cix-elfutils.org][elfutils]] :: collection of utilities and DSOs to handle ELF files and DWARF
+    data:
   + [[./spices/cix-facter.org][facter]] :: Command and ruby library for gathering system information:
+  + [[./spices/cix-fio.org][fio]] :: multithreaded IO generation tool:
+  + [[./spices/cix-likwid.org][likwid]] :: performance monitoring and benchmarking suite
   + [[./spices/cix-moreutils.org][moreutils]] :: tools that nobody thought to write when unix was young:
+  + [ohai] ::
   + [[file:./spices/cix-parallel.org][parallel]] :: shell tool for executing jobs in parallel
   + [[./spices/cix-pax-utils.org][pax-utils]] :: ELF utils that can check files for security relevant properties
   + [[./spices/cix-pm-utils.org][pm-utils]] :: suspend and powerstate setting framework
   + [[./spices/cix-procps-ng.org][procps-ng]] :: utilities for monitoring your system and its processes
+  + [psacct] ::
   + [[./spices/cix-psmisc.org][psmisc]] :: is a set of small utilities that use the proc filesystem.
   + [[./spices/cix-shadow-utils.org][shadow-utils]] :: utilities for managing accounts and shadow password files
   + [[file:./spices/cix-vmtouch.org][vmtouch]] :: Portable file system cache diagnostics and control
 
 - *System-stats-monitoring* /Keep an Eye on Me/
-  + [[./spices/cix-blktrace.org][blktrace]] :: utilities for performing block layer io tracing in the linux: =GNU/linux=
+  + [[./spices/cix-blktrace.org][blktrace]] :: utilities for performing block layer io tracing in the linux:
+    =GNU/linux=
   + [[./spices/cix-circus.org][circus]] :: a process & socket manager built with zmq:
-  + [[./spices/cix-supervisor.org][supervisor]] :: A System for Allowing the Control of Process State on UNIX: =GNU/Linux= =OS-X= =Solaris= =FreeBSD=
+  + [[./spices/cix-supervisor.org][supervisor]] :: A System for Allowing the Control of Process State on UNIX:
+    =GNU/Linux= =OS-X= =Solaris= =FreeBSD=
   + [[./spices/cix-sysstat.org][sysstat]] :: collection of performance monitoring tools: =GNU/Linux=
   + [[file:./spices/cix-smem.org][smem]] :: report application memory usage in a meaningful way:
 
 - *Hardware* /Hard as a rock!/
   + [[file:./spices/cix-iw.org][iw]] :: A nl80211 based wireless configuration tool: =GNU/Linux=
-  + [[./spices/cix-dmidecode.org][dmidecode]] :: tool to analyse bios dmi data: =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =BeOS= =Solaris= =Haiku=
+  + [[./spices/cix-dmidecode.org][dmidecode]] :: tool to analyse bios dmi data: =GNU/Linux= =FreeBSD= =NetBSD=
+    =OpenBSD= =BeOS= =Solaris= =Haiku=
   + [[./spices/cix-lshw.org][lshw]] :: hardware lister: =GNU/Linux=
   + [[file:./spices/cix-oprofile.org][OProfile]] :: System wide profiler: =GNU/Linux=
-  + [[./spices/cix-pciutils.org][pciutils]] :: pci bus related utilities: =FreeBSD= =NetBSD= =OpenBSD= =GNU/Linux= =FreeBSD= =Solaris/i386= =AIX= =GNU/Hurdd= =Windows= =Cygwin= =BeOS= =Haiku= =Darwin=
-  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks: =OS-X= =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS/2= =Cygwin= =QNX= =eCmStation= =Windows=
-  + [[./spices/cix-stress.org][stress]] :: A tool to put given subsystems under a specified load: =GNU/Linux= =Gentoo= =OpenBSD= =FreeBSD=
-  + [[file:./spices/cix-stress-ng.org][stress-ng]] :: stress test a computer system in various ways: =GNU/Linux= =GNU/Hurd= =FreeBSD= =OpenBSD= =NetBSD= =FreeBSD= =MINIX= =OpenIndiana=
+  + [[./spices/cix-pciutils.org][pciutils]] :: pci bus related utilities: =FreeBSD= =NetBSD= =OpenBSD=
+    =GNU/Linux= =FreeBSD= =Solaris/i386= =AIX= =GNU/Hurdd= =Windows= =Cygwin=
+    =BeOS= =Haiku= =Darwin=
+  + [[./spices/cix-smartmontools.org][smartmontools]] :: tools for monitoring smart capable hard disks: =OS-X=
+    =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS/2= =Cygwin= =QNX=
+    =eCmStation= =Windows=
+  + [[./spices/cix-stress.org][stress]] :: A tool to put given subsystems under a specified load: =GNU/Linux=
+    =Gentoo= =OpenBSD= =FreeBSD=
+  + [[file:./spices/cix-stress-ng.org][stress-ng]] :: stress test a computer system in various ways: =GNU/Linux=
+    =GNU/Hurd= =FreeBSD= =OpenBSD= =NetBSD= =FreeBSD= =MINIX= =OpenIndiana=
   + [[./spices/cix-usbutils.org][usbutils]] :: Linux usb utilities: =GNU/Linux=
-  + [[file:./spices/cix-flashrom.org][flashrom]] :: simple program for reading/writing flash chips content: =GNU/Linux= =DOS= =Linux= =FreeBSD= =NetBSD= =OpenBSD= =DragonFlyBSD= =Solarise= =OS-X=  =GNU/Hurd=
+  + [[file:./spices/cix-flashrom.org][flashrom]] :: simple program for reading/writing flash chips content:
+    =GNU/Linux= =DOS= =Linux= =FreeBSD= =NetBSD= =OpenBSD= =DragonFlyBSD=
+    =Solarise= =OS-X= =GNU/Hurd=
 
 - *Searching* /Loosing my religion/
   + [[./spices/cix-ack.org][ack]] :: grep-like text finder
   + [[./spices/cix-ag.org][ag]] :: super-fast text searching tool - The Silver Searcher
   + [[./spices/cix-fdupes.org][fdupes]] :: finds duplicate files in a given set of directories
-  + [[./spices/cix-gnu-findutils.org][findutils]] :: the GNU versions of find utilities (find and xargs): =GNU/Linux=
+  + [[./spices/cix-gnu-findutils.org][findutils]] :: the GNU versions of find utilities (find and xargs):
+    =GNU/Linux=
   + [[./spices/cix-gnu-grep.org][grep]] :: pattern matching utilities: =GNU/Linux=
-  + [[file:./spices/cix-jq.org][jq]] :: command-line json processor: =OS-X= =FreeBSD= =Solaris= =GNU/Linux= =Windows=
+  + [[file:./spices/cix-jq.org][jq]] :: command-line json processor: =OS-X= =FreeBSD= =Solaris= =GNU/Linux=
+    =Windows=
   + [[file:./spices/cix-mlocate.org][mlocate]] :: an utility for finding files by name: =GNU/Linux=
   + [[file:./spices/cix-pcre-tools.org][pcre-tools]] :: auxiliary utilities for pcre: =GNU/Linux=
-  + [[file:./spices/cix-ripgrep.org][ripgrep]] :: rg combines the usability of The Silver Searcher with the raw speed of grep.
+  + [[file:./spices/cix-ripgrep.org][ripgrep]] :: rg combines the usability of The Silver Searcher with the raw
+    speed of grep.
   + [[file:./spices/cix-sift.org][sift]] :: A fast and powerful alternative to grep: =OS-X= =GNU/Linux=
-  + [[file:./spices/cix-ucg.org][ucg]] :: extremely fast grep-like tool specialized for searching large bodies of source code.
+  + [[file:./spices/cix-ucg.org][ucg]] :: extremely fast grep-like tool specialized for searching large bodies
+    of source code.
 
 - *Compress-archive* /I'm a pac man/
   + [[./spices/cix-bzip2.org][bzip2]] :: a file compression utility
@@ -175,29 +209,40 @@ on *GNU/Linux*
   + [[./spices/cix-lrzip.org][lrzip]] :: compression program optimized for large files
   + [[./spices/cix-pax.org][pax]] :: POSIX file system archiver
   + [[./spices/cix-xz.org][xz]] :: lzma compression utilities: =GNU/Linux= =FreeBSD=
-  + [[./spices/cix-gnu-sharutils.org][sharutils]] :: shar utilities for packaging and unpackaging shell archives:  =GNU/Linux=
+  + [[./spices/cix-gnu-sharutils.org][sharutils]] :: shar utilities for packaging and unpackaging shell archives:
+    =GNU/Linux=
 
 - *Networking* /We all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying dns name server
   + [[file:./spices/cix-bridge-utils.org][bridge-utils]] :: utilities for configuring the Linux ethernet bridge
-  + [[file:./spices/cix-hping.org][hping]] :: a command-line oriented TCP/IP packet assembler/analyzer: =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS-X= =Windows=
+  + [[file:./spices/cix-hping.org][hping]] :: a command-line oriented TCP/IP packet assembler/analyzer:
+    =GNU/Linux= =FreeBSD= =NetBSD= =OpenBSD= =Solaris= =OS-X= =Windows=
   + [[./spices/cix-gnu-inetutils.org][inetutils]] :: a collection of common network programs
   + [[./spices/cix-iproute2.org][iproute2]] :: routing commands and utilities
   + [[./spices/cix-iptables.org][iptables]] :: Linux kernel packet filtering capabilities: =GNU/Linux=
   + [[./spices/cix-iputils.org][iputils]] :: network monitoring tools including ping: =GNU/Linux=
   + [[file:./spices/cix-ncat.org][ncat]] :: general-purpose network connector (nmap's project netcat replacement:
-  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries: =GNU/Linux= =FreeBSD= =OpenBSD= =Solaris/SPARC= =OS-X= =AIX= =HP-UX= =NetBSD= =OSF= =SunOS= =Ultrix= =QNX= =Dynix= =IRIX= =Windows=
+  + [[./spices/cix-net-snmp.org][net-snmp]] :: a collection of snmp protocol tools and libraries: =GNU/Linux=
+    =FreeBSD= =OpenBSD= =Solaris/SPARC= =OS-X= =AIX= =HP-UX= =NetBSD= =OSF=
+    =SunOS= =Ultrix= =QNX= =Dynix= =IRIX= =Windows=
   + [[./spices/cix-net-tools.org][net-tools]] :: collection of base networking utilities
-  + [[file:./spices/cix-netcat.org][netcat]] :: a TCP/IP swiss army knife for networking:  =DOS= =ULTRIX= =SunOS= =Solaris= =AIX= =GNU/Linux= =IRIX= =OSF= =NetBSD= =HP-UX= =AUX= =NeXT=
-  + [[file:./spices/cix-netperf.org][netperf]] :: TCP/UDP/sockets/etc performance benchmark: =FreeBSD= =AIX= =Solaris= =GNU/Linux= =HP-UX= =IRIX=
+  + [[file:./spices/cix-netcat.org][netcat]] :: a TCP/IP swiss army knife for networking: =DOS= =ULTRIX= =SunOS=
+    =Solaris= =AIX= =GNU/Linux= =IRIX= =OSF= =NetBSD= =HP-UX= =AUX= =NeXT=
+  + [[file:./spices/cix-netperf.org][netperf]] :: TCP/UDP/sockets/etc performance benchmark: =FreeBSD= =AIX=
+    =Solaris= =GNU/Linux= =HP-UX= =IRIX=
   + [[./spices/cix-nmap.org][nmap]] :: network exploration tool and security scanner
-  + [[./spices/cix-openssh.org][OpenSSH]] :: an open source implementation of ssh protocol: =AIX= =HP-UX= =IRIX= =GNU/Linux= =Next= =Sco= =Sni/Reliant= =Unix= =Solaris= =Digital= =Unix/Tru64/Osf= =Mac= =Os-X= =Cygwin=
-  + [[file:./spices/cix-scapy.org][scapy]] :: Interactive packet manipulation tool and network scanner: =GNU/Linux=
+  + [[./spices/cix-openssh.org][OpenSSH]] :: an open source implementation of ssh protocol: =AIX= =HP-UX=
+    =IRIX= =GNU/Linux= =Next= =Sco= =Sni/Reliant= =Unix= =Solaris= =Digital=
+    =Unix/Tru64/Osf= =Mac= =Os-X= =Cygwin=
+  + [[file:./spices/cix-scapy.org][scapy]] :: Interactive packet manipulation tool and network scanner:
+    =GNU/Linux=
   + [[./spices/cix-tcpdump.org][tcpdump]] :: dump traffic on a network: =GNU/Linux= =FreeBSD=
-  + [[./spices/cix-dsniff.org][dsniff]] :: tools for network auditing and penetration testing: =GNU/Linux= =OpenBSD= =Solaris=
+  + [[./spices/cix-dsniff.org][dsniff]] :: tools for network auditing and penetration testing: =GNU/Linux=
+    =OpenBSD= =Solaris=
   + [[./spices/cix-ipset.org][ipset]] :: Manage Linux IP sets: =GNU/Linux=
   + [[./spices/cix-iptraf-ng.org][iptraf-ng]] :: a console-based network monitoring utility: =GNU/Linux=
-  : + [[./spices/cix-socat.org][socat]] :: bidirectional data relay between two data channels ('netcat++'): =GNU/Linux=
+  + [[./spices/cix-socat.org][socat]] :: bidirectional data relay between two data channels ('netcat++'):
+    =GNU/Linux=
   + [tshark] ::
   + [[./spices/cix-snort.org][snort]] ::
   + [suricata] ::
@@ -246,28 +291,34 @@ on *GNU/Linux*
 - *Boot-Init-systems* /Let's party started!/
   + [[./spices/cix-systemd.org][systemd]] ::  a system and service manager
   + [[./spices/cix-upstart.org][upstart]] :: event-based init daemo
-  + [[file:./spices/cix-syslinux.org][syslinux]] :: Simple kernel loader which boots from a FAT filesystem: =GNU/Linux=
+  + [[file:./spices/cix-syslinux.org][syslinux]] :: Simple kernel loader which boots from a FAT filesystem:
+    =GNU/Linux=
   + [[file:./spices/cix-gnu-grub2.org][grub2]] :: Bootloader with support multiboot and more: =GNU/Linux=
 
 - *Development* /In the fields of observation chance favors only the prepared mind./
-  + [[./spices/cix-gnu-autoconf.org][autoconf]] :: a GNU tool for automatically configuring source code: =GNU/Linux=
+  + [[./spices/cix-gnu-autoconf.org][autoconf]] :: a GNU tool for automatically configuring source code:
+    =GNU/Linux=
   + [[file:./spices/cix-gnu-automake.org][automake]] :: A GNU tool for automatically creating Makefiles: =GNU/Linux=
   + [[./spices/cix-gnu-binutils.org][binutils]] :: collection of binary tools: =GNU/Linux=
   + [[file:./spices/cix-gnu-bison.org][bison]] ::  A GNU general-purpose parser generator
   + [[file:./spices/cix-cmake.org][cmake]] :: Cross-platform make system
   + [[file:./spices/cix-ctags.org][ctags]] :: A C programming language indexing and/or cross-reference tool
   + [[./spices/cix-gcc.org][gcc]] :: various compilers (c, c++, objective-c, java, ...): =GNU/Linux=
-  + [[./spices/cix-gdb.org][gdb]] :: a GNU source-level debugger for C, C++, Fortran, Go and other languages
+  + [[./spices/cix-gdb.org][gdb]] :: a GNU source-level debugger for C, C++, Fortran, Go and other
+    languages
   + [[file:./spices/cix-git.org][git]] :: Fast Version Control System
-  + [[./spices/cix-glibc.org][glibc]] :: common binaries and locale data containing the main C library: =GNU/Linux=
+  + [[./spices/cix-glibc.org][glibc]] :: common binaries and locale data containing the main C library:
+    =GNU/Linux=
   + [[file:./spices/cix-global.org][global]] :: Source code tag system
-  + [[file:./spices/cix-jemalloc.org][jemalloc]] :: General-purpose scalable concurrent malloc implementation: =GNU/Linux= =FreeBSD=
+  + [[file:./spices/cix-jemalloc.org][jemalloc]] :: General-purpose scalable concurrent malloc implementation:
+    =GNU/Linux= =FreeBSD=
   + [[file:./spices/cix-gnu-libtool.org][libtool]] :: The GNU Portable Library Tool: =GNU/Linux= =Solaris=
   + [[file:./spices/cix-gnu-lightning.org][lightning]] :: library for generating assembly code on run time: =GNU/Linux=
   + [[file:./spices/cix-llvm.org][llvm]] :: The Low Level Virtual Machine: =OS-X= =GNU/Linux=
   + [[file:./spices/cix-gnu-make.org][make]] :: a tool which simplifies the build process for users: =GNU/Linux=
   + [[file:./spices/cix-musl.org][musl]] ::
-  + [[file:./spices/cix-valgrind.org][valgrind]] :: tool for finding memory management bugs in programs: =GNU/Linux= =Solaris= =Android= =Darvin=
+  + [[file:./spices/cix-valgrind.org][valgrind]] :: tool for finding memory management bugs in programs: =GNU/Linux=
+    =Solaris= =Android= =Darvin=
 
 - *Packaging* /Pack me up, pack me down/
   + [[./spices/cix-apt.org][apt]] :: Debian/Ubuntu commandline package panager.
@@ -275,7 +326,8 @@ on *GNU/Linux*
   + [[file:./spices/cix-dnf.org][dnf]] :: fork of yum, using libsolv as a dependency resolve
   + [[file:./spices/cix-dpkg.org][dpkg]] :: package manager for debian
   + [[file:spices/cix-pacman.org][pacman]] :: is one of the major distinguishing features of Arch Linux
-  + [[file:./spices/cix-pkg-pkgng.org][pkg/pkgng]] :: is the Next Generation package management tool for FreeBSD: =FreeBSD=
+  + [[file:./spices/cix-pkg-pkgng.org][pkg/pkgng]] :: is the Next Generation package management tool for FreeBSD:
+    =FreeBSD=
   + [[file:./spices/cix-rpm.org][rpm]] :: package manager is a command line driven package management system
   + [guix] ::
   + [nix] ::
@@ -286,9 +338,11 @@ on *GNU/Linux*
 
 - *Kernel-traces* /Go to basic/
   + [[./spices/cix-kmod.org][kmod]] :: Linux kernel module management utilities:
-  + [[file:./spices/cix-dtrace.org][dtrace]] :: comprehensive dynamic tracing framework: =Solaris= =FreeBSD= =NetBSD= =OS-X=
+  + [[file:./spices/cix-dtrace.org][dtrace]] :: comprehensive dynamic tracing framework: =Solaris= =FreeBSD=
+    =NetBSD= =OS-X=
   + [[./spices/cix-strace.org][strace]] :: tracks and displays system calls associated with a running process
-  + [[file:./spices/cix-kernel-devel.org][kernel-devel]] :: development package for building kernel modules to match the kernel
+  + [[file:./spices/cix-kernel-devel.org][kernel-devel]] :: development package for building kernel modules to match the
+    kernel
   + [[file:./spices/cix-dkms.org][dkms]] :: dynamic kernel module support framework
   + [[./spices/cix-perf.org][perf]] :: performance monitoring for the Linux kernel: =GNU/Linux=
   + [ftrace] ::
@@ -308,7 +362,9 @@ on *GNU/Linux*
   + [nginx] ::
 
 - *Databases*
-  + [postgresql] :: is an advanced Object-Relational database management system: =GNU/Linux= =Win= =FreeBSD= =OpenBSD= =NetBSD= =OS-X= =AIX= =HP-UX= =Solaris=
+  + [postgresql] :: is an advanced Object-Relational database management system:
+    =GNU/Linux= =Win= =FreeBSD= =OpenBSD= =NetBSD= =OS-X= =AIX= =HP-UX=
+    =Solaris=
   + [pgcli] ::
 
 - *Virtualisation*
